# mesh-contract

./: .env.example  .env.testnet.example  .gitignore  BUILD_ISSUES.md  CONTRIBUTING.md  Cargo.toml  EVENTS.md  IMPLEMENTATION.md  LICENSE  README.md  VERIFICATION_REPORT.md  drips.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  smart_contract.yml
.github/workflows/: create-wave-issues.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs  tests.rs
contracts/escrow/src/interfaces/: types.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs  tests.rs
contracts/registry/src/interfaces/: types.rs
contracts/registry/test_snapshots/test/: test_contribution_workflow.1.json  test_double_initialize_fails.1.json  test_initialize_and_getters.1.json  test_multiple_waves_per_program.1.json  test_one_open_wave_per_program.1.json  test_register_and_get_program.1.json  test_wave_events.1.json  test_wave_lifecycle.1.json
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs  tests.rs
contracts/settlement/src/interfaces/: errors.rs
scripts/: deploy.ps1  deploy.sh  seed_testnet.ps1  seed_testnet.sh
tests/: integration_tests.rs
